--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ga-wdi-boston.ember-auth",
+  "name": "ga-curriculum",
   "version": "0.0.0",
   "description": "ember auth template",
   "private": true,
